# python-vimeo

./: README.md  README.rst  pyproject.toml
python_vimeo/: client.py
