[tool.poetry]
name = "python-vimeo"
version = "0.1.0"
description = "A Python wrapper for Vimeos API"
readme = "README.rst"
homepage = "https://github.com/arbington/python-vimeo"
repository = "https://github.com/arbington/python-vimeo"
authors = ["Kalob Taulien <kalob.taulien@gmail.com>"]
keywords = ["vimeo", "python", "api"]
classifiers=[
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.dependencies]
python = "^3.9"
PyVimeo = "^1.1.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
